# jester

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_package.yml  mypy_check.yml  tests.yml
jester/: Assertions.py  DatabaseTestCases.py  Testdata.py  __init__.py
tests/: test-db-config.xml
tests/database/: test_DatabaseConfiguration.py  test_DatabaseConnection.py  test_DatabaseTestCases.py
