[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Jester"
authors = [
    { name = "jswa" },
]
description = "Python library for database integration tests."
requires-python = ">=3.12"
#readme = "README.rst"
#keywords = ["none", "nothing"]
#license = {text = ""}
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
    "J_core @ https://github.com/JSchwanse/j_core/releases/download/v0.0.1/J_Core-0.0.1-py3-none-any.whl"
]
dynamic = ["version"]

[project.optional-dependencies]
PG_DRIVER = ["psycopg2-binary"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { }  # Scan the project directory with the default parameters

[tool.setuptools.package-data]
jester = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "jester.__version__" }
